--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
   },
   "dependencies": {
     "express": "^5.1.0",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.3",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.25",
     "lucide": "^0.487.0",
     "lucide-react": "^0.487.0",
+    "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.0",
     "next": "15.2.4",
     "nodemailer": "^6.10.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
